fixed raw latex in wrangling, intro; fixed figure spill over

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -253,7 +253,7 @@ file satisfies everything else that the `read_csv` function expects in the defau
 use-case. Figure \@ref(fig:img-read-csv) describes how we use the `read_csv`
 to read data into R. 
 
-``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the read_csv function.", fig.retina = 2}
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for reading a csv file.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/read_csv_function.jpeg")
 ```
 
@@ -672,6 +672,6 @@ documentation like that shown in Figure \@ref(fig:01-help). But do keep in mind 
 is not written to *teach* you about a function; it is just there as a reference to *remind*
 you about the different arguments and usage of functions that you have already learned about elsewhere.
 
-```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2}
+```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/help-filter.png")
 ```
