--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -344,14 +344,14 @@ Figure \@ref(fig:img-pivot-longer-with-table),
 we could simply use one line of code (`max(mother_tongue)`) 
 to get the maximum value. 
 
-```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function.", fig.retina = 2}
+```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot longer function.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.003.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details what arguments we need to specify to
 use the `tidyverse` function, `pivot_longer`, to accomplish this data transformation.
 
-``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_longer function.", fig.retina = 2}
+``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot longer function.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
@@ -444,14 +444,14 @@ since these two variables are stored in the same column.
 Figure \@ref(fig:img-pivot-wider-table) shows how this data
 will be tidied using the `pivot_wider` function.
 
-``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with pivot_wider.", fig.retina = 2}
+``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with the pivot wider function.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.004.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-wider) details what we need to specify 
 to use the `pivot_wider` function.
 
-``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function.", fig.retina = 2}
+``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot wider function.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_wider.jpeg")
 ```
 
@@ -1264,7 +1264,7 @@ and then calculate the minimum and maximum number of Canadians
 reporting the language as the primary language at home 
 for each of the regions in the data set.
 
-```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", fig.retina = 2}
+```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize + group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", fig.retina = 2}
 image_read("img/summarize/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
