fixed source link around robots/scraping in reading

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -964,21 +964,19 @@ R if we are using more than one CSS selector.
 *Before* scraping \index{web scraping!permission} data from the web, you should always check whether or not
 you are *allowed* to scrape it! There are two documents that are important
 for this: the `robots.txt` file and the Terms of Service
-document. Let's take a look at Craigslist's Terms of Service document:
+document. Let's take a look at [Craigslist's Terms of Service document](https://www.craigslist.org/about/terms.of.use):
 
 *"You agree not to copy/collect CL content via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand)."*
-
-source: https://www.craigslist.org/about/terms.of.use
-
-> Want to learn more about the legalities of web scraping and crawling? Read
-> this blog post titled ["Web Scraping and Crawling Are Perfectly
-> Legal, Right?" by Benoit
-> Bernard](https://benbernardblog.com/web-scraping-and-crawling-are-perfectly-legal-right/).
 
 So what to do now? Well, we *could* ask the owner of Craigslist for permission to scrape.
 However, we are not likely to get a response, and even if we did they would not likely give us permission.
 The more realistic answer is that we simply cannot scrape Craigslist. If we still want
 to find data about rental prices in Vancouver, we must go elsewhere.
+
+> Want to learn more about the legalities of web scraping and crawling? Read
+> this blog post titled ["Web Scraping and Crawling Are Perfectly
+> Legal, Right?" by Benoit
+> Bernard](https://benbernardblog.com/web-scraping-and-crawling-are-perfectly-legal-right/).
 
 To continue learning how to scrape data from the web, let's instead
 scrape data on the population of Canadian cities from Wikipedia. \index{Wikipedia}
