minor edit to craiglist permission paragraph

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -964,9 +964,10 @@ R if we are using more than one CSS selector.
 *Before* scraping \index{web scraping!permission} data from the web, you should always check whether or not
 you are *allowed* to scrape it! There are two documents that are important
 for this: the `robots.txt` file and the Terms of Service
-document. Let's take a look at [Craigslist's Terms of Service document](https://www.craigslist.org/about/terms.of.use):
-
-*"You agree not to copy/collect CL content via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand)."*
+document. If we take a look at [Craigslist's Terms of Service document](https://www.craigslist.org/about/terms.of.use),
+we find the following text: *"You agree not to copy/collect CL content 
+via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand)."*
+So unfortunately, without explicit permission, we are not allowed to scrape the website.
 
 So what to do now? Well, we *could* ask the owner of Craigslist for permission to scrape.
 However, we are not likely to get a response, and even if we did they would not likely give us permission.
