fixed figure below in viz, added refs

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1269,11 +1269,12 @@ plot_grid(morley_hist_default,
 
 One of the powerful features of `ggplot` is that you 
 can continue to iterate on a single plot object, adding and refining
-one layer at a time. If you stored your plot as a named object
+one layer \index{ggplot!add layer} at a time. If you stored your plot as a named object
 using the assignment symbol (`<-`), you can 
 add to it using the `+` operator.
 For example, if we wanted to add a title to the last plot we created (`morley_hist`), 
 we can use the `+` operator to add a title layer with the `ggtitle` function.
+The result is shown in Figure \@ref(fig:03-data-morley-hist-addlayer).
 
 ```{r 03-data-morley-hist-addlayer, warning = FALSE, message = FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
 morley_hist_title <- morley_hist +
@@ -1407,7 +1408,8 @@ bad, while raster images eventually start to look "pixellated."
 
 Let's learn how to save plot images to these different file formats using a 
 scatter plot of 
-the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata].
+the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata],
+shown in Figure \@ref(fig:03-plot-line).
 
 ```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 4.5, fig.height = 3.75, fig.cap = "Scatter plot of waiting time and eruption time."}
 library(svglite) # we need this to save SVG files
@@ -1468,7 +1470,7 @@ smaller than the uncompressed raster images (BMP, TIFF). Also, note that the
 JPG format is twice as large as the PNG format since the JPG compression
 algorithm is designed for natural images (not plots). 
 
-Below, we also show what
+In Figure \@ref(fig:03-raster-image), we also show what
 the images look like when we zoom in to a rectangle with only 3 data points.
 You can see why vector graphics formats are so useful: because they're just
 based on mathematical formulas, vector graphics can be scaled up to arbitrary
