--- a/reading.Rmd
+++ b/reading.Rmd
@@ -969,16 +969,10 @@ we find the following text: *"You agree not to copy/collect CL content
 via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand)."*
 So unfortunately, without explicit permission, we are not allowed to scrape the website.
 
-So what to do now? Well, we *could* ask the owner of Craigslist for permission to scrape.
+What to do now? Well, we *could* ask the owner of Craigslist for permission to scrape.
 However, we are not likely to get a response, and even if we did they would not likely give us permission.
 The more realistic answer is that we simply cannot scrape Craigslist. If we still want
 to find data about rental prices in Vancouver, we must go elsewhere.
-
-> Want to learn more about the legalities of web scraping and crawling? Read
-> this blog post titled ["Web Scraping and Crawling Are Perfectly
-> Legal, Right?" by Benoit
-> Bernard](https://benbernardblog.com/web-scraping-and-crawling-are-perfectly-legal-right/).
-
 To continue learning how to scrape data from the web, let's instead
 scrape data on the population of Canadian cities from Wikipedia. \index{Wikipedia}
 We have checked the [Terms of Service document](https://foundation.wikimedia.org/wiki/Terms_of_Use/en),
