fixed aggregating section title in wrangling

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1155,7 +1155,7 @@ Additionally, piping many functions can be overwhelming and difficult to debug;
 you may want to store a temporary object midway through to inspect your result
 before moving on with further steps.
 
-## Aggregating data with `summarize`
+## Aggregating data with `summarize` and `map`
 
 ### Calculating summary statistics on whole columns
 
