--- a/references.bib
+++ b/references.bib
@@ -61,7 +61,7 @@
 @book{james2013introduction,
   title={An Introduction to Statistical Learning},
   author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
-  edition={$1^\text{st}$},
+  edition={1st},
   year={2013},
   publisher={Springer}
 }
@@ -225,8 +225,8 @@
 }
 
 @book{wickham2019advanced,
-  title={Advanced r},
+  title={Advanced {R}},
   author={Wickham, Hadley},
   year={2019},
-  publisher={chapman and hall/CRC}
+  publisher={CRC Press}
 }
