--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -110,7 +110,7 @@ there are distinct types of penguins in our data.
 Understanding this might help us with species discovery and classification in a data-driven
 way.
 
-```{r 09-penguins, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3, fig.width = 4, fig.cap = "Gentoo penguin.", fig.retina = 2}
+```{r 09-penguins, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Gentoo penguin.", out.width="60%", fig.align = "center", fig.retina = 2}
 # image source: https://commons.wikimedia.org/wiki/File:Gentoo_Penguin._(8671680772).jpg
 knitr::include_graphics("img/gentoo.jpg")
 ```
@@ -142,6 +142,7 @@ data <- read_csv("data/toy_penguins.csv") |>
 
 penguin_data <- data |> select(flipper_length_standardized, 
 bill_length_standardized)
+
 write_csv(penguin_data, "data/penguins_standardized.csv")
 ```
 
@@ -431,6 +432,7 @@ where the left column depicts the center update,
 and the right column depicts the reassignment of data to clusters.
 
 **Center Update**  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;**Label Update**
+
 ```{r 10-toy-kmeans-iter, echo = FALSE, warning = FALSE, fig.height = 16, fig.width = 8, fig.cap = "First four iterations of K-means clustering on the `penguin_data` example data set. Each row corresponds to an iteration, where the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black."}
 list_plot_cntrs <- vector(mode = "list", length = 4)
 list_plot_lbls <- vector(mode = "list", length = 4)
@@ -526,7 +528,6 @@ plt_lbl <- ggplot(penguin_data, aes(y = bill_length_standardized,
 
 plt_lbl
 ```
-
 
 Figure \@ref(fig:10-toy-kmeans-bad-iter) shows what the iterations of K-means would look like with the unlucky random initialization shown in Figure \@ref(fig:10-toy-kmeans-bad-init).
 
