fixing spacing in question table, adding Note to note box, adding aaa to ? index so it appears first, fixing extra dash symbol in writing

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -94,8 +94,8 @@ the analysis as well as the selection of appropriate tools.\index{question!data 
 
 Table: (\#tab:questions-table) Types of data analysis question [@leek2015question; @peng2015art].
 
-| Question type | Description | Example |
-|---------------|-------------|---------|
+|Question type|    Description         |     Example        |
+|-------------|------------------------|--------------------|
 | Descriptive | A question that asks about summarized characteristics of a data set without interpretation (i.e., report a fact). | How many people live in each province and territory in Canada? |
 | Exploratory | A question asks if there are patterns, trends, or relationships within a single data set. Often used to propose hypotheses for future study. | Does political party voting change with indicators of wealth in a set of data collected on 2,000 people living in Canada? |
 | Predictive | A question that asks about predicting measurements or labels for individuals (people or things). The focus is on what things predict some outcome, but not what causes the outcome. | What political party will someone vote for in the next Canadian election? |
@@ -298,7 +298,7 @@ we do not need to surround the name we are creating  with quotes. This is
 because we are formally telling R that this special word denotes
 the value of whatever is on the right hand side.
 Only characters and words that act as *values* on the right hand side of the assignment
-symbol&mdash;e.g., the file name `"data/can_lang.csv"` that we specified before, or `"Alice"` above&mdash;&mdash;need 
+symbol&mdash;e.g., the file name `"data/can_lang.csv"` that we specified before, or `"Alice"` above&mdash;need 
 to be surrounded by quotes.
 
 After making the assignment, we can use the special name words we have created in
@@ -591,7 +591,7 @@ were, according to the 2016 Candian census, and how many people speak each of th
 instance, we can see that the Aboriginal language most often reported was Cree
 n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 
-> "n.o.s." means "not otherwise specified", so Cree n.o.s. refers to
+> **Note:** "n.o.s." means "not otherwise specified", so Cree n.o.s. refers to
 > individuals who reported Cree as their mother tongue. In this data set, the
 > Cree languages include the following categories: Cree n.o.s., Swampy Cree,
 > Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which
@@ -650,7 +650,7 @@ There are many R functions in the `tidyverse` package (and beyond!), and
 nobody can be expected to remember what every one of them does
 nor all of the arguments we have to give them. Fortunately R provides 
 the `?` symbol, which 
-\index{questionmark@? symbol|see{documentation}}
+\index{aaaquestionmark@? symbol|see{documentation}}
 \index{help|see{documentation}}
 \index{documentation} provides an easy way to pull up the documentation for 
 most functions quickly. To use the `?` symbol to access documentation, you 
