add bolding to Note in note blocks, fixing table margins, fig out width

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -128,8 +128,8 @@ knitr::include_graphics("img/vector/vector.001.jpeg")
 
 Table: (#tab:datatype-table) Basic data types in R
 
-| Data type | Abbreviation | Description | Example |
-| --------- | ------------ |------------ |---------|
+| Data type  | Abbreviation |   Description           |    Example     |
+| ---------- | ------------ |------------------------ |----------------|
 | character | chr | letters or numbers surrounded by quotes | "1" , "Hello world!" |
 | double | dbl | numbers with decimals values | 1.2333 |
 | integer | int | numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) |
@@ -198,7 +198,7 @@ Because a tibble is just a data frame with some added features,
 we will collectively refer to both built-in R data frames and
 tibbles as data frames in this book.
 
-> You can use the function `class` \index{class} on a data object to assess whether a data
+>  **Note:** You can use the function `class` \index{class} on a data object to assess whether a data
 > frame is a built-in R data frame or a tibble. If the data object is a data
 > frame, `class` will return `"data.frame"`. If the data object is a
 > tibble it will return `"tbl_df" "tbl" "data.frame"`. You can easily convert
@@ -301,7 +301,7 @@ by creating a column called "year" and a column called
 "longer"&mdash;is shown as the right table in
 Figure \@ref(fig:02-wide-to-long).
 
-``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Pivoting data from a wide to long data format.", fig.retina = 2}
+``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Pivoting data from a wide to long data format.",  fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.001.jpeg")
 ```
 
@@ -372,7 +372,7 @@ lang_mother_tidy
 ```
 
 
-> **Splitting code across lines**: In the code above, the call to the
+> **Note**: In the code above, the call to the
 > `pivot_longer` function is split across several lines. This is allowed in
 > certain cases; for example, when calling a function as above, as long as the 
 > line ends with a comma `,` R knows to keep reading on the next line.
@@ -412,7 +412,7 @@ we need to create a column called "population"
 and a column called "commuters."
 This is illustrated in the right table of Figure \@ref(fig:long-to-wide).
 
-``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data.", fig.retina = 2}
+``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.002.jpeg")
 ```
 
@@ -521,7 +521,7 @@ that speak each language most at work for each region.
 Figure \@ref(fig:img-separate) 
 outlines what we need to specify to use `separate`.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function.", fig.retina = 2}
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/separate_function.jpeg")
 ```
 
@@ -836,7 +836,7 @@ If we were to give the columns a new name,
 then `mutate` would create new columns with the names we specified.
 `mutate`'s general syntax is detailed in Figure \@ref(fig:img-mutate).
 
-``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function.", fig.retina = 2}
+``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function.",  fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/mutate_function.jpeg")
 ```
 
@@ -1168,7 +1168,8 @@ Oftentimes,
 this summary statistic is calculated from the values in a data frame column, 
 or columns, as shown in Figure \@ref(fig:summarize).
 
-```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.", fig.retina = 2}
+```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.", fig.retina = 2, out.width = "100%"}
+
 image_read("img/summarize/summarize.001.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1259,12 +1260,11 @@ summarize(region_lang_na,
 A common pairing with `summarize` is `group_by`. Pairing these functions \index{group\_by}
 together can let you summarize values for subgroups within a data set,
 as illustrated in Figure \@ref(fig:summarize-groupby). 
-For example, we can use `group_by` to group the regions of the `tidy_lang` data frame
-and then calculate the minimum and maximum number of Canadians 
+For example, we can use `group_by` to group the regions of the `tidy_lang` data frame and then calculate the minimum and maximum number of Canadians 
 reporting the language as the primary language at home 
 for each of the regions in the data set.
 
-```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize + group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", fig.retina = 2}
+```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize + group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1304,7 +1304,7 @@ Then we will also explore how we can use a more general iteration function,
 `map`, to also accomplish this.
 
 
-```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.", fig.retina = 2}
+```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.", fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.003.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1442,7 +1442,7 @@ Sometimes we need to apply a function to many columns in a data frame.
 For example, we would need to do this when converting units of measurements across many columns. 
 We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 
-```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.", fig.retina = 2}
+```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.",  fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.005.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1482,7 +1482,7 @@ to the specified columns (here `mother_tongue` to `lang_known`).
 What if you want to apply a function across columns but within one row? 
 We illustrate such a data transformation in Figure \@ref(fig:rowwise).
 
-```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`rowwise` + `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.", fig.retina = 2}
+```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`rowwise` + `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.",  fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.004.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1575,7 +1575,7 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
   - As we mentioned earlier, `tidyverse` is actually an *R
     meta package*: it installs and loads a collection of R packages that all
     follow the tidy data philosophy we discussed above. One of the `tidyverse`
-    packages is `dplyr` - a data wrangling workhorse. You have already met many
+    packages is `dplyr`&mdash;a data wrangling workhorse. You have already met many
     of `dplyr`'s functions 
     (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). 
     To learn more about these functions and meet a few more useful
