--- a/reading.Rmd
+++ b/reading.Rmd
@@ -78,7 +78,7 @@ read in the `.csv` file named `happiness_report.csv` into R, we could do this
 using either a relative or an absolute path.  We show both choices
 below.\index{Happiness Report}
 
-```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="100%"}
+```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/filesystem.jpeg")
 ```
 
@@ -184,7 +184,7 @@ relative path to the file.
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
-> Note: it is also normal and expected that \index{warning} a message is
+> **Note:** it is also normal and expected that \index{warning} a message is
 > printed out after using
 > the `read_csv` and related functions. This message lets you know the data types
 > of each of the columns that R inferred while reading the data into R.  In
@@ -230,7 +230,7 @@ data set:
 canlang_data <- read_csv("data/can_lang_meta-data.csv")
 ```
 
-> Note: In contrast to the normal and expected messages above, this time R 
+> **Note:** In contrast to the normal and expected messages above, this time R 
 > printed out a warning for us indicating that there might be a problem with how
 > our data is being read in. \index{warning}
 
@@ -327,7 +327,7 @@ specify that there are no column names to assign, and give it the value of
 `FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument
 \index{read function!col\_names argument} and the default is `TRUE`. 
 
-> `\t` is an example of an *escape character*, \index{escape character}
+> **Note:** `\t` is an example of an *escape character*, \index{escape character}
 > typically used to represent non-printing characters (like the tab) or
 > characters with special meanings (such as quotation marks). 
 
@@ -462,7 +462,7 @@ Semicolon (`;`) separated files |  `read_csv2` | `readr`
 Various formats (`.csv`, `.tsv`)   | `read_delim` | `readr`
 Excel files (`.xlsx`) | `read_excel` | `readxl`
 
-> Note: `readr` is a part of the `tidyverse` package so we did not need to load
+> **Note:** `readr` is a part of the `tidyverse` package so we did not need to load
 > this package separately since we loaded `tidyverse`.
 
 ## Reading data from a database
@@ -1148,7 +1148,7 @@ input your username and password and hit "Sign In." Twitter will probably send y
 that there was an unusual login attempt on your account, and in that case you will have to take
 the one-time code they send you and provide that to the `rtweet` login page too. 
 
-> Every API has its own way to authenticate users when they try to access data. Many APIs require you to
+> **Note:** Every API has its own way to authenticate users when they try to access data. Many APIs require you to
 > sign up to receive a *token*, which is a secret password that you input into the R package (like `rtweet`) 
 > that you are using to access the API. 
 
