fixed fig captions

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -344,14 +344,18 @@ Figure \@ref(fig:img-pivot-longer-with-table),
 we could simply use one line of code (`max(mother_tongue)`) 
 to get the maximum value. 
 
-```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot longer function.", fig.retina = 2, out.width="100%"}
+(ref:img-pivot-longer-with-table) Going from wide to long with the `pivot_longer` function.
+
+```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer-with-table)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.003.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details what arguments we need to specify to
 use the `tidyverse` function, `pivot_longer`, to accomplish this data transformation.
 
-``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot longer function.", fig.retina = 2, out.width="100%"}
+(ref:img-pivot-longer) Syntax for the `pivot_longer` function.
+
+``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
@@ -368,6 +372,7 @@ lang_mother_tidy <- pivot_longer(lang_wide,
   names_to = "region",
   values_to = "mother_tongue"
 )
+
 lang_mother_tidy
 ```
 
@@ -444,14 +449,18 @@ since these two variables are stored in the same column.
 Figure \@ref(fig:img-pivot-wider-table) shows how this data
 will be tidied using the `pivot_wider` function.
 
-``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with the pivot wider function.", fig.retina = 2, out.width="100%"}
+(ref:img-pivot-wider-table) Going from long to wide with the `pivot_wider` function.
+
+``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider-table)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.004.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-wider) details what we need to specify 
 to use the `pivot_wider` function.
 
-``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot wider function.", fig.retina = 2, out.width="100%"}
+(ref:img-pivot-wider) Syntax for the `pivot_wider` function.
+
+``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/pivot_wider.jpeg")
 ```
 
@@ -510,6 +519,7 @@ lang_messy_longer <- pivot_longer(lang_messy,
   names_to = "region",
   values_to = "value"
 )
+
 lang_messy_longer
 ```
 
@@ -521,7 +531,9 @@ that speak each language most at work for each region.
 Figure \@ref(fig:img-separate) 
 outlines what we need to specify to use `separate`.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function.", fig.retina = 2, out.width = "100%"}
+(ref:img-separate) Syntax for the `separate` function.
+
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/separate_function.jpeg")
 ```
 
@@ -531,6 +543,7 @@ tidy_lang <- separate(lang_messy_longer,
   into = c("most_at_home", "most_at_work"),
   sep = "/"
 )
+
 tidy_lang
 ```
 
@@ -570,6 +583,7 @@ tidy_lang <- separate(lang_messy_longer,
   sep = "/", 
   convert = TRUE
 )
+
 tidy_lang
 ```
 
@@ -836,7 +850,9 @@ If we were to give the columns a new name,
 then `mutate` would create new columns with the names we specified.
 `mutate`'s general syntax is detailed in Figure \@ref(fig:img-mutate).
 
-``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function.",  fig.retina = 2, out.width = "100%"}
+(ref:img-mutate) Syntax for the `mutate` function.
+
+``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/mutate_function.jpeg")
 ```
 
@@ -849,6 +865,7 @@ official_langs_numeric <- mutate(official_langs_chr,
   most_at_home = as.numeric(most_at_home),
   most_at_work = as.numeric(most_at_work)
 )
+
 official_langs_numeric
 ```
 
@@ -1089,6 +1106,7 @@ output of `filter` to the input of `select`:
 van_data_selected <- tidy_lang |>
         filter(region == "Vancouver") |> 
         select(language, most_at_home)
+
 van_data_selected
 ```
 
@@ -1128,6 +1146,7 @@ to order the data frame rows by the values in that column, in ascending order.
 large_region_lang <- filter(tidy_lang, most_at_home > 10000) |>
   select(region, language, most_at_home) |>
   arrange(most_at_home)
+
 large_region_lang
 ```
 
@@ -1141,6 +1160,7 @@ large_region_lang <- tidy_lang |>
   filter(most_at_home > 10000) |>
   select(region, language, most_at_home) |>
   arrange(most_at_home)
+
 large_region_lang
 ```
 
@@ -1168,7 +1188,9 @@ Oftentimes,
 this summary statistic is calculated from the values in a data frame column, 
 or columns, as shown in Figure \@ref(fig:summarize).
 
-```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.", fig.retina = 2, out.width = "100%"}
+(ref:summarize) `summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.
+
+```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "100%"}
 
 image_read("img/summarize/summarize.001.jpeg") |> 
   image_crop("2000x475+0+300")
@@ -1233,6 +1255,7 @@ in the first row of the `most_at_home column`:
 region_lang_na <- region_lang
 region_lang_na[["most_at_home"]][1] <- NA
 ```
+
 ```{r}
 region_lang_na
 ```
@@ -1264,7 +1287,9 @@ For example, we can use `group_by` to group the regions of the `tidy_lang` data 
 reporting the language as the primary language at home 
 for each of the regions in the data set.
 
-```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize + group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", fig.retina = 2, out.width = "100%"}
+(ref:summarize-groupby) `summarize` and `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.
+
+```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize-groupby)", fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1304,12 +1329,14 @@ Then we will also explore how we can use a more general iteration function,
 `map`, to also accomplish this.
 
 
-```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.", fig.retina = 2, out.width = "100%"}
+(ref:summarize-across) `summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.
+
+```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize-across)", fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.003.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
-#### `summarize` + `across` for calculating summary statistics on many columns {-}
+#### `summarize` and `across` for calculating summary statistics on many columns {-}
 
 To summarize statistics across many columns, we can use the 
 `summarize` function we have just recently learned about.
@@ -1442,7 +1469,9 @@ Sometimes we need to apply a function to many columns in a data frame.
 For example, we would need to do this when converting units of measurements across many columns. 
 We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 
-```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.",  fig.retina = 2, out.width = "100%"}
+(ref:mutate-across) `mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.
+
+```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:mutate-across)",  fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.005.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1482,7 +1511,9 @@ to the specified columns (here `mother_tongue` to `lang_known`).
 What if you want to apply a function across columns but within one row? 
 We illustrate such a data transformation in Figure \@ref(fig:rowwise).
 
-```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`rowwise` + `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.",  fig.retina = 2, out.width = "100%"}
+(ref:rowwise) `rowwise` and `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.
+
+```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:rowwise)",  fig.retina = 2, out.width = "100%"}
 image_read("img/summarize/summarize.004.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
