some formatting fixes and a bug fix for extracting an item from a list column

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -839,12 +839,17 @@ penguin_clust_ks
 
 If we wanted to get one of the clusterings out 
 of the list column in the data frame,
-we can use our familiar friends `slice` and `pull`.
+we can a familiar friend: `pull`.
+`pull` will return to us a data frame column as a simpler data structure,
+here that would be a list.
+And then to extract the first item of the list, 
+we can use the `pluck` function; 
+passing it the index for the element we would like to extract (here 1).
 
 ```{r}
 penguin_clust_ks |>
-  slice(1) |>
-  pull(penguin_clusts)
+  pull(penguin_clusts) |>
+  pluck(1)
 ```
 
 Next, we use `mutate` again to apply `glance` \index{glance} 
