--- a/viz.Rmd
+++ b/viz.Rmd
@@ -284,7 +284,9 @@ default settings.
 \index{ggplot!aes}
 \index{ggplot!geom\_point}
  
-```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatter plot with the ggplot function.", message =F, out.width="100%"}
+(ref:03-ggplot-function-scatter) Creating a scatter plot with the `ggplot` function.
+
+```{r 03-ggplot-function-scatter, echo = FALSE, fig.cap = "(ref:03-ggplot-function-scatter)", message = FALSE, out.width = "100%"}
 knitr::include_graphics("img/ggplot_function_scatter.jpeg")
 ```
 
@@ -736,7 +738,9 @@ palettes that `RColorBrewer` has to offer with the `display.brewer.all`
 function. You can also print a list of color-blind friendly palettes by adding
 `colorblindFriendly = TRUE` to the function. 
 
-```{r rcolorbrewer, fig.height = 8, fig.cap = "Color palettes available from the `RColorBrewer` R package."}
+(ref:rcolorbrewer) Color palettes available from the `RColorBrewer` R package.
+
+```{r rcolorbrewer, fig.height = 8, fig.cap = "(ref:rcolorbrewer)"}
 library(RColorBrewer)
 display.brewer.all(colorblindFriendly = TRUE)
 ```
@@ -1478,7 +1482,7 @@ sizes.  This makes them great for presentation media of all sizes, from papers
 to posters to billboards.
 
 
-```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats.", fig.show="hold", fig.align= "center", message =F}
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats.", fig.show="hold", fig.align= "center", message =F, out.width="100%"}
 knitr::include_graphics("img/png-vs-svg.png")
 ```
 
