--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -819,7 +819,7 @@ have been replaced by `z` values.
 ```{r 08-predictor-design-2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Relationship between the transformed predictor and the response."}
 curve_plt2 <- ggplot(df, aes(x = z, y = y)) +
   geom_point() +
-  xlab("z = x^3") +
+  xlab(paste0("z = ", expression(x^3))) +
   ylab("y") +
   geom_smooth(method = "lm", se = FALSE)
 
