--- a/inference.Rmd
+++ b/inference.Rmd
@@ -512,14 +512,14 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night(Canadian dollars)") +
+  xlab("Sample mean price per night\n(Canadian dollars)") +
   ggtitle("n = 20") 
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night(Canadian dollars)") +
+  xlab("Sample mean price per night\n(Canadian dollars)") +
   ggtitle("n = 50") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -527,7 +527,7 @@ sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
 sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night (Canadian dollars)") +
+  xlab("Sample mean price per night\n(Canadian dollars)") +
   ggtitle("n = 100") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -535,7 +535,7 @@ sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) 
 sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night (Canadian dollars)") +
+  xlab("Sample mean price per night\n(Canadian dollars)") +
   ggtitle("n = 500") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
