changing rtweet to code in fig cap

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1132,7 +1132,9 @@ tidyverse_tweets <- get_timelines('tidyverse', n=400)
 When you call the `get_timelines` for the first time (or any other `rtweet` function that accesses the API), 
 you will see a browser pop-up that looks something like Figure \@ref(fig:01-tidyverse-authorize).
 
-```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The rtweet authorization prompt.", fig.retina = 2, out.width="100%"}
+(ref:01-tidyverse-authorize) The `rtweet` authorization prompt.
+
+```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:01-tidyverse-authorize)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/authorize_question.png")
 ```
 
