fix code block coming off page

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -602,7 +602,11 @@ learned in Chapter \@ref(intro), we would pass the `tidy_lang` data frame as
 well as all of these column names into the `select` function:
 
 ``` {r}
-selected_columns <- select(tidy_lang, language, region, most_at_home, most_at_work)
+selected_columns <- select(tidy_lang, 
+                           language, 
+                           region, 
+                           most_at_home, 
+                           most_at_work)
 selected_columns
 ```
 
@@ -1067,7 +1071,7 @@ output <- data |>
 > books and other resources.
 > In most cases these two pipes are interchangeable and either can be used.
 
-\index{pipesymbb@\texttt{%>%}|see{pipe}}
+\index{pipe}\index{pipesymbb@\texttt{%>%}|see{pipe}}
 
 ### Using `|>` to combine `filter` and `select`
 
